gen/hlasm/HlasmParser.java
// Generated from C:/Users/anisik/IdeaProjects/hlasm-library-antlr/src/hlasm\HlasmParser.g4 by ANTLR 4.7
package hlasm;

import org.antlr.jetbrains.adaptor.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HlasmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROLOG_MACRO=1, ENDLINE=2, COMMENT=3, ENDLINE_COMM=4, OLD_TOKEN=5, STRING_ERROR=6, 
		LABEL_DEF=7, SPACES1=8, PUSH=9, POP=10, PRINT=11, EQU=12, CSECT=13, DSECT=14, 
		RSECT=15, DS=16, DC=17, COPY=18, SPACE=19, USING=20, DROP=21, ALIAS=22, 
		AMODE=23, EJECT=24, END=25, ENTRY=26, LOCTR=27, LTORG=28, OPSYN=29, ORG=30, 
		CCW=31, AGO=32, MACRO=33, MEND=34, ANOP=35, LCLA=36, LCLB=37, LCLC=38, 
		GBLC=39, GBLA=40, GBLB=41, AIF=42, SETB=43, SETA=44, SETC=45, COMMAND=46, 
		FIELD_INFO=47, STRING_QUOTE=48, ENDLINE_COMMENT=49, LEFT_ROUND_PAR=50, 
		RIGHT_ROUND_PAR=51, DOT=52, COMMA=53, PLUS=54, MINUS=55, EQUALS=56, MUL=57, 
		DIVIDE=58, LEN_TYPE=59, NUMBER=60, LABEL=61, UNKNOWN_CHAR=62, STRING=63, 
		COMMENT_CONT1=64, ARG_SEPARATOR=65, ERROR=66, ERROR2=67, ERROR4=68, COMMENT_CONT=69, 
		ESCAPE=70;
	public static final int
		RULE_lines2 = 0, RULE_lines = 1, RULE_statement2 = 2, RULE_statement = 3, 
		RULE_macro = 4, RULE_macro_def_wr = 5, RULE_line_wrapper = 6, RULE_line = 7, 
		RULE_complex_condition = 8, RULE_condition = 9, RULE_arguments = 10, RULE_argument = 11, 
		RULE_named_argument = 12, RULE_expression = 13, RULE_expression_list = 14, 
		RULE_simple_expr = 15;
	public static final String[] ruleNames = {
		"lines2", "lines", "statement2", "statement", "macro", "macro_def_wr", 
		"line_wrapper", "line", "complex_condition", "condition", "arguments", 
		"argument", "named_argument", "expression", "expression_list", "simple_expr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, "'PUSH'", "'POP'", 
		"'PRINT'", "'EQU'", "'CSECT'", "'DSECT'", "'RSECT'", "'DS'", "'DC'", "'COPY'", 
		"'SPACE'", "'USING'", "'DROP'", "'ALIAS'", "'AMODE'", "'EJECT'", "'END'", 
		"'ENTRY'", "'LOCTR'", "'LTORG'", "'OPSYN'", "'ORG'", "'CCW'", "'AGO'", 
		"'MACRO'", "'MEND'", "'ANOP'", "'LCLA'", "'LCLB'", "'LCLC'", "'GBLC'", 
		"'GBLA'", "'GBLB'", "'AIF'", "'SETB'", "'SETA'", "'SETC'", null, null, 
		null, null, "'('", "')'", "'.'", "','", "'+'", "'-'", "'='", "'*'", null, 
		null, null, null, null, "'''", null, "'               '", null, null, 
		null, null, "''''"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PROLOG_MACRO", "ENDLINE", "COMMENT", "ENDLINE_COMM", "OLD_TOKEN", 
		"STRING_ERROR", "LABEL_DEF", "SPACES1", "PUSH", "POP", "PRINT", "EQU", 
		"CSECT", "DSECT", "RSECT", "DS", "DC", "COPY", "SPACE", "USING", "DROP", 
		"ALIAS", "AMODE", "EJECT", "END", "ENTRY", "LOCTR", "LTORG", "OPSYN", 
		"ORG", "CCW", "AGO", "MACRO", "MEND", "ANOP", "LCLA", "LCLB", "LCLC", 
		"GBLC", "GBLA", "GBLB", "AIF", "SETB", "SETA", "SETC", "COMMAND", "FIELD_INFO", 
		"STRING_QUOTE", "ENDLINE_COMMENT", "LEFT_ROUND_PAR", "RIGHT_ROUND_PAR", 
		"DOT", "COMMA", "PLUS", "MINUS", "EQUALS", "MUL", "DIVIDE", "LEN_TYPE", 
		"NUMBER", "LABEL", "UNKNOWN_CHAR", "STRING", "COMMENT_CONT1", "ARG_SEPARATOR", 
		"ERROR", "ERROR2", "ERROR4", "COMMENT_CONT", "ESCAPE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HlasmParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	 public boolean isJcl = false;  
	public HlasmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Lines2Context extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HlasmParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> OLD_TOKEN() { return getTokens(HlasmParser.OLD_TOKEN); }
		public TerminalNode OLD_TOKEN(int i) {
			return getToken(HlasmParser.OLD_TOKEN, i);
		}
		public Lines2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lines2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlasmParserListener ) ((HlasmParserListener)listener).enterLines2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlasmParserListener ) ((HlasmParserListener)listener).exitLines2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlasmParserVisitor ) return ((HlasmParserVisitor<? extends T>)visitor).visitLines2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lines2Context lines2() throws RecognitionException {
		Lines2Context _localctx = new Lines2Context(_ctx, getState());
		enterRule(_localctx, 0, RULE_lines2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PROLOG_MACRO) | (1L << ENDLINE) | (1L << COMMENT) | (1L << ENDLINE_COMM) | (1L << OLD_TOKEN) | (1L << STRING_ERROR) | (1L << LABEL_DEF) | (1L << SPACES1) | (1L << PUSH) | (1L << POP) | (1L << PRINT) | (1L << EQU) | (1L << CSECT) | (1L << DSECT) | (1L << RSECT) | (1L << DS) | (1L << DC) | (1L << COPY) | (1L << SPACE) | (1L << USING) | (1L << DROP) | (1L << ALIAS) | (1L << AMODE) | (1L << EJECT) | (1L << END) | (1L << ENTRY) | (1L << LOCTR) | (1L << LTORG) | (1L << OPSYN) | (1L << ORG) | (1L << CCW) | (1L << AGO) | (1L << MACRO) | (1L << ANOP) | (1L << LCLA) | (1L << LCLB) | (1L << LCLC) | (1L << GBLC) | (1L << GBLA) | (1L << GBLB) | (1L << AIF) | (1L << SETB) | (1L << SETA) | (1L << SETC) | (1L << COMMAND) | (1L << FIELD_INFO) | (1L << STRING_QUOTE) | (1L << ENDLINE_COMMENT) | (1L << LEFT_ROUND_PAR) | (1L << RIGHT_ROUND_PAR) | (1L << DOT) | (1L << COMMA) | (1L << PLUS) | (1L << MINUS) | (1L << EQUALS) | (1L << MUL) | (1L << DIVIDE) | (1L << LEN_TYPE) | (1L << NUMBER) | (1L << LABEL) | (1L << UNKNOWN_CHAR) | (1L << STRING))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (COMMENT_CONT1 - 64)) | (1L << (ARG_SEPARATOR - 64)) | (1L << (ERROR - 64)) | (1L << (ERROR2 - 64)) | (1L << (ERROR4 - 64)) | (1L << (COMMENT_CONT - 64)) | (1L << (ESCAPE - 64)))) != 0)) {
				{
				setState(34);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PROLOG_MACRO:
				case ENDLINE:
				case COMMENT:
				case ENDLINE_COMM:
				case STRING_ERROR:
				case LABEL_DEF:
				case SPACES1:
				case PUSH:
				case POP:
				case PRINT:
				case EQU:
				case CSECT:
				case DSECT:
				case RSECT:
				case DS:
				case DC:
				case COPY:
				case SPACE:
				case USING:
				case DROP:
				case ALIAS:
				case AMODE:
				case EJECT:
				case END:
				case ENTRY:
				case LOCTR:
				case LTORG:
				case OPSYN:
				case ORG:
				case CCW:
				case AGO:
				case MACRO:
				case ANOP:
				case LCLA:
				case LCLB:
				case LCLC:
				case GBLC:
				case GBLA:
				case GBLB:
				case AIF:
				case SETB:
				case SETA:
				case SETC:
				case COMMAND:
				case FIELD_INFO:
				case STRING_QUOTE:
				case ENDLINE_COMMENT:
				case LEFT_ROUND_PAR:
				case RIGHT_ROUND_PAR:
				case DOT:
				case COMMA:
				case PLUS:
				case MINUS:
				case EQUALS:
				case MUL:
				case DIVIDE:
				case LEN_TYPE:
				case NUMBER:
				case LABEL:
				case UNKNOWN_CHAR:
				case STRING:
				case COMMENT_CONT1:
				case ARG_SEPARATOR:
				case ERROR:
				case ERROR2:
				case ERROR4:
				case COMMENT_CONT:
				case ESCAPE:
					{
					setState(32);
					statement();
					}
					break;
				case OLD_TOKEN:
					{
					setState(33);
					match(OLD_TOKEN);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(39);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinesContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> OLD_TOKEN() { return getTokens(HlasmParser.OLD_TOKEN); }
		public TerminalNode OLD_TOKEN(int i) {
			return getToken(HlasmParser.OLD_TOKEN, i);
		}
		public LinesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lines; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlasmParserListener ) ((HlasmParserListener)listener).enterLines(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlasmParserListener ) ((HlasmParserListener)listener).exitLines(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlasmParserVisitor ) return ((HlasmParserVisitor<? extends T>)visitor).visitLines(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinesContext lines() throws RecognitionException {
		LinesContext _localctx = new LinesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_lines);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(43);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case PROLOG_MACRO:
					case ENDLINE:
					case COMMENT:
					case ENDLINE_COMM:
					case STRING_ERROR:
					case LABEL_DEF:
					case SPACES1:
					case PUSH:
					case POP:
					case PRINT:
					case EQU:
					case CSECT:
					case DSECT:
					case RSECT:
					case DS:
					case DC:
					case COPY:
					case SPACE:
					case USING:
					case DROP:
					case ALIAS:
					case AMODE:
					case EJECT:
					case END:
					case ENTRY:
					case LOCTR:
					case LTORG:
					case OPSYN:
					case ORG:
					case CCW:
					case AGO:
					case MACRO:
					case ANOP:
					case LCLA:
					case LCLB:
					case LCLC:
					case GBLC:
					case GBLA:
					case GBLB:
					case AIF:
					case SETB:
					case SETA:
					case SETC:
					case COMMAND:
					case FIELD_INFO:
					case STRING_QUOTE:
					case ENDLINE_COMMENT:
					case LEFT_ROUND_PAR:
					case RIGHT_ROUND_PAR:
					case DOT:
					case COMMA:
					case PLUS:
					case MINUS:
					case EQUALS:
					case MUL:
					case DIVIDE:
					case LEN_TYPE:
					case NUMBER:
					case LABEL:
					case UNKNOWN_CHAR:
					case STRING:
					case COMMENT_CONT1:
					case ARG_SEPARATOR:
					case ERROR:
					case ERROR2:
					case ERROR4:
					case COMMENT_CONT:
					case ESCAPE:
						{
						setState(41);
						statement();
						}
						break;
					case OLD_TOKEN:
						{
						setState(42);
						match(OLD_TOKEN);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(47);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statement2Context extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HlasmParser.EOF, 0); }
		public Line_wrapperContext line_wrapper() {
			return getRuleContext(Line_wrapperContext.class,0);
		}
		public MacroContext macro() {
			return getRuleContext(MacroContext.class,0);
		}
		public Statement2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlasmParserListener ) ((HlasmParserListener)listener).enterStatement2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlasmParserListener ) ((HlasmParserListener)listener).exitStatement2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlasmParserVisitor ) return ((HlasmParserVisitor<? extends T>)visitor).visitStatement2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Statement2Context statement2() throws RecognitionException {
		Statement2Context _localctx = new Statement2Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement2);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROLOG_MACRO:
			case ENDLINE:
			case COMMENT:
			case ENDLINE_COMM:
			case STRING_ERROR:
			case LABEL_DEF:
			case SPACES1:
			case PUSH:
			case POP:
			case PRINT:
			case EQU:
			case CSECT:
			case DSECT:
			case RSECT:
			case DS:
			case DC:
			case COPY:
			case SPACE:
			case USING:
			case DROP:
			case ALIAS:
			case AMODE:
			case EJECT:
			case END:
			case ENTRY:
			case LOCTR:
			case LTORG:
			case OPSYN:
			case ORG:
			case CCW:
			case AGO:
			case ANOP:
			case LCLA:
			case LCLB:
			case LCLC:
			case GBLC:
			case GBLA:
			case GBLB:
			case AIF:
			case SETB:
			case SETA:
			case SETC:
			case COMMAND:
			case FIELD_INFO:
			case STRING_QUOTE:
			case ENDLINE_COMMENT:
			case LEFT_ROUND_PAR:
			case RIGHT_ROUND_PAR:
			case DOT:
			case COMMA:
			case PLUS:
			case MINUS:
			case EQUALS:
			case MUL:
			case DIVIDE:
			case LEN_TYPE:
			case NUMBER:
			case LABEL:
			case UNKNOWN_CHAR:
			case STRING:
			case COMMENT_CONT1:
			case ARG_SEPARATOR:
			case ERROR:
			case ERROR2:
			case ERROR4:
			case COMMENT_CONT:
			case ESCAPE:
				{
				setState(48);
				line_wrapper();
				}
				break;
			case MACRO:
				{
				setState(49);
				macro();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(52);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Line_wrapperContext line_wrapper() {
			return getRuleContext(Line_wrapperContext.class,0);
		}
		public MacroContext macro() {
			return getRuleContext(MacroContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlasmParserListener ) ((HlasmParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlasmParserListener ) ((HlasmParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlasmParserVisitor ) return ((HlasmParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(56);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROLOG_MACRO:
			case ENDLINE:
			case COMMENT:
			case ENDLINE_COMM:
			case STRING_ERROR:
			case LABEL_DEF:
			case SPACES1:
			case PUSH:
			case POP:
			case PRINT:
			case EQU:
			case CSECT:
			case DSECT:
			case RSECT:
			case DS:
			case DC:
			case COPY:
			case SPACE:
			case USING:
			case DROP:
			case ALIAS:
			case AMODE:
			case EJECT:
			case END:
			case ENTRY:
			case LOCTR:
			case LTORG:
			case OPSYN:
			case ORG:
			case CCW:
			case AGO:
			case ANOP:
			case LCLA:
			case LCLB:
			case LCLC:
			case GBLC:
			case GBLA:
			case GBLB:
			case AIF:
			case SETB:
			case SETA:
			case SETC:
			case COMMAND:
			case FIELD_INFO:
			case STRING_QUOTE:
			case ENDLINE_COMMENT:
			case LEFT_ROUND_PAR:
			case RIGHT_ROUND_PAR:
			case DOT:
			case COMMA:
			case PLUS:
			case MINUS:
			case EQUALS:
			case MUL:
			case DIVIDE:
			case LEN_TYPE:
			case NUMBER:
			case LABEL:
			case UNKNOWN_CHAR:
			case STRING:
			case COMMENT_CONT1:
			case ARG_SEPARATOR:
			case ERROR:
			case ERROR2:
			case ERROR4:
			case COMMENT_CONT:
			case ESCAPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				line_wrapper();
				}
				break;
			case MACRO:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				macro();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MacroContext extends ParserRuleContext {
		public TerminalNode MACRO() { return getToken(HlasmParser.MACRO, 0); }
		public List<ArgumentsContext> arguments() {
			return getRuleContexts(ArgumentsContext.class);
		}
		public ArgumentsContext arguments(int i) {
			return getRuleContext(ArgumentsContext.class,i);
		}
		public Macro_def_wrContext macro_def_wr() {
			return getRuleContext(Macro_def_wrContext.class,0);
		}
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public TerminalNode MEND() { return getToken(HlasmParser.MEND, 0); }
		public List<TerminalNode> ENDLINE() { return getTokens(HlasmParser.ENDLINE); }
		public TerminalNode ENDLINE(int i) {
			return getToken(HlasmParser.ENDLINE, i);
		}
		public TerminalNode LABEL_DEF() { return getToken(HlasmParser.LABEL_DEF, 0); }
		public MacroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlasmParserListener ) ((HlasmParserListener)listener).enterMacro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlasmParserListener ) ((HlasmParserListener)listener).exitMacro(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlasmParserVisitor ) return ((HlasmParserVisitor<? extends T>)visitor).visitMacro(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MacroContext macro() throws RecognitionException {
		MacroContext _localctx = new MacroContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_macro);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(MACRO);
			setState(59);
			arguments();
			setState(61); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(60);
					match(ENDLINE);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(63); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(65);
			macro_def_wr();
			setState(66);
			lines();
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LABEL_DEF) {
				{
				setState(67);
				match(LABEL_DEF);
				}
			}

			setState(70);
			match(MEND);
			setState(71);
			arguments();
			setState(72);
			match(ENDLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Macro_def_wrContext extends ParserRuleContext {
		public Line_wrapperContext line_wrapper() {
			return getRuleContext(Line_wrapperContext.class,0);
		}
		public Macro_def_wrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_macro_def_wr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlasmParserListener ) ((HlasmParserListener)listener).enterMacro_def_wr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlasmParserListener ) ((HlasmParserListener)listener).exitMacro_def_wr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlasmParserVisitor ) return ((HlasmParserVisitor<? extends T>)visitor).visitMacro_def_wr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Macro_def_wrContext macro_def_wr() throws RecognitionException {
		Macro_def_wrContext _localctx = new Macro_def_wrContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_macro_def_wr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			line_wrapper();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Line_wrapperContext extends ParserRuleContext {
		public TerminalNode ENDLINE() { return getToken(HlasmParser.ENDLINE, 0); }
		public TerminalNode LABEL_DEF() { return getToken(HlasmParser.LABEL_DEF, 0); }
		public LineContext line() {
			return getRuleContext(LineContext.class,0);
		}
		public Line_wrapperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line_wrapper; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HlasmParserListener ) ((HlasmParserListener)listener).enterLine_wrapper(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HlasmParserListener ) ((HlasmParserListener)listener).exitLine_wrapper(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HlasmParserVisitor ) return ((HlasmParserVisitor<? extends T>)visitor).visitLine_wrapper(this);
			else return visitor.visitChildren(this);
		}
	}
